--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ LibreTV 全局样式
 
 :root {
     /* 赛博影视主题配色方案 - 柔和版 */
-    --primary-color: #00ccff;       /* 霓虹蓝主色调 */
+    --primary-color: #d6ff00;       /* 霓虹蓝主色调 */
     --primary-light: #33d6ff;       /* 浅霓虹蓝变体 */
     --secondary-color: #0f1622;     /* 深蓝黑背景色 */
     --accent-color: #ff3c78;        /* 霓虹粉强调色 */
